# esp_tcps_serial

./: README.md  idf_esp32_letter_shell_patch
esp_tcps_serial/: CMakeLists.txt
esp_tcps_serial/components/letter-shell/: CMakeLists.txt
esp_tcps_serial/components/letter-shell/include/: shell_cfg.h
esp_tcps_serial/components/letter-shell/letter-shell/src/: shell_cfg.h.bak
esp_tcps_serial/main/: CMakeLists.txt  main.c
esp_tcps_serial/main/passthrough/: app_pt.c
esp_tcps_serial/main/passthrough/include/: app_pt.h
esp_tcps_serial/main/shell/: app_shell.c
esp_tcps_serial/main/shell/include/: app_shell.h
esp_tcps_serial/main/wifi/: app_wifi.c
esp_tcps_serial/main/wifi/include/: app_wifi.h
