idf_component_register(SRCS "main.c"
                            "shell/app_shell.c"
                            "wifi/app_wifi.c"
                            "passthrough/app_pt.c"
                   INCLUDE_DIRS ""
                                "shell/include"
                                "wifi/include"
                                "passthrough/include")