idf_component_register(SRCS "letter-shell/src/shell.c"
                            "letter-shell/src/shell_cmd_list.c"
                            "letter-shell/src/shell_companion.c"
                            "letter-shell/src/shell_ext.c"
                       INCLUDE_DIRS "./include" "letter-shell/src")